# src/Controller/Person/PersonRelationsController.php
@@ -91,7 +91,12 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function getProducts(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        /** @var Person|null $person */
+        $person = $this->entityManager
+            ->getRepository(PersonQueryController::getEntityClassName())
+            ->find($args[PersonQueryController::getEntityIdName()]);
+        $products = $person?->getProducts() ?? [];
+        return $this->getElements($response, $person, ProductQueryController::getEntitiesTag(), $products);
     }
 
     /**
@@ -107,6 +112,11 @@ final class PersonRelationsController extends ElementRelationsBaseController
      */
     public function operationProduct(Request $request, Response $response, array $args): Response
     {
-        // @TODO
+        return $this->operationRelatedElements(
+            $request,
+            $response,
+            $args,
+            ProductQueryController::getEntityClassName()
+        );
     }
 }
